[package]
name = "alyncoin-stark"
version = "0.1.0"
edition = "2021"

[dependencies]
alyn-air = { path = "../../alyn-air", default-features = false, features = ["std"] }
alyn-crypto = { path = "../../alyn-crypto", default-features = false, features = ["std"] }
alyn-utils = { path = "../../alyn-utils", default-features = false, features = ["std"] }
alyn-math = { path = "../../alyn-math", default-features = false, features = ["std"] }
alyn-prover = { path = "../../alyn-prover", default-features = false, features = ["std"] }
alyn-verifier = { path = "../../alyn-verifier", default-features = false, features = ["std"] }

blake3 = { version = "1.7", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[features]
default = ["std"]
std = ["blake3/std"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "zk_winterfell"
crate-type = ["staticlib"]
